[package]
name = "petscan_rs"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
regex = "1"
lazy_static = "1"
chrono = "*"
config = "*"
serde_json = "*"
url = "*"
rayon = "*"
htmlescape = "*"
rand = "*"
mysql_async = { version = "*", features = ["tracing"] }
reqwest = { version = "*", features = ["json"] }
time = "^0.3"
percent-encoding = "*"
async-trait = "*"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc" }
tokio = { version = "^1", features = ["macros", "fs", "sync"] }
tokio-util = "*"
hyper = { version = "^1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures = "*"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
tracing = "0.1.40"

[profile.release]
lto = "fat"
codegen-units = 1
#target-cpu = "native"
panic = "abort"
#strip = "debuginfo"
