[package]
name = "petscan_rs"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
regex = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
rayon = "1"
htmlescape = "0.3"
rand = "0.9"
mysql_async = { version = "0.36", features = ["tracing"] }
toolforge = { version = "5", features = ["mysql"] }
percent-encoding = "2"
async-trait = "0.1"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc" }
tokio = { version = "^1", features = ["macros", "fs", "sync", "signal", "test-util"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
tracing = "0.1.40"

[profile.release]
lto = "fat"
codegen-units = 1
#target-cpu = "native"
panic = "abort"
strip = "debuginfo"
